4/postgres-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deploy
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      db: postgres-db
  template:
    metadata:
      labels:
        db: postgres-db
    spec:
      containers:
      - name: postgres-db
        image: postgres:10.13
        ports:
        - containerPort: 5432
          protocol: TCP
        volumeMounts:
        - name: pg-data
          mountPath: "/var/lib/postgresql/data"
      volumes:
      - name: pg-data
        persistentVolumeClaim:
          claimName: pg-data
