4/redmine-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine-deploy
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      db: postgres-db
      app: redmine
  template:
    metadata:
      labels:
        db: postgres-db
        app: redmine
    spec:
      containers:
      - name: redmine
        image: redmine:4.1.1
        ports:
        - containerPort: 3000
          protocol: TCP
