4/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pg-service
spec:
  selector:
    db: postgres-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: redmine-service
spec:
  selector:
    app: redmine
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
