4/redmine-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redmine-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: 89.208.198.121.nip.io
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: redmine-service
            port:
              number: 3000
